--- a/html/important-npcs.html
+++ b/html/important-npcs.html
@@ -99,7 +99,7 @@
   >
   <!-- =============== BEGIN DIVINE AND COSMIC HIERARCHY =============== -->
     <section>
-      <div style="border: 3px solid #FFD700; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: rgba(255, 255, 224, 0.10);">
+  <div style="border: 3px solid #FFD700; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: #00000062;">
         <h2 style="color: #FFD700; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000; margin-top: 0;">Divine and Cosmic Hierarchy</h2>
         <ul>
           <li>
@@ -148,7 +148,7 @@
   <!-- =============== END DIVINE AND COSMIC HIERARCHY =============== -->
   <!-- =============== BEGIN OTHER DIVINE AND COSMIC FIGURES =============== -->
     <section>
-      <div style="border: 3px solid #00FFFF; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: rgba(224,255,255,0.10);">
+  <div style="border: 3px solid #00FFFF; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: #00000062;">
         <h2 style="color: #00FFFF; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000; margin-top: 0;">Other Divine and Cosmic Figures</h2>
         <ul>
           <li>
@@ -190,7 +190,7 @@
   <!-- =============== END OTHER DIVINE AND COSMIC FIGURES =============== -->
   <!-- =============== BEGIN DAX FAMILY AND ASSOCIATES =============== -->
     <section>
-      <div style="border: 3px solid #FFA500; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: rgba(255, 228, 181, 0.10);">
+  <div style="border: 3px solid #FFA500; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: #00000062;">
         <h2 style="color: #FFA500; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000; margin-top: 0;">Dax Family and Associates</h2>
         <ul>
           <li>
@@ -235,7 +235,7 @@
   <!-- =============== END DAX FAMILY AND ASSOCIATES =============== -->
   <!-- =============== BEGIN NOTABLE SHOPKEEPERS AND WANDERERS =============== -->
     <section>
-      <div style="border: 3px solid #00BFFF; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: rgba(173,216,230,0.10);">
+  <div style="border: 3px solid #00BFFF; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: #00000062;">
         <h2 style="color: #00BFFF; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000; margin-top: 0;">Notable Shopkeepers and Wanderers</h2>
         <ul>
           <li>
@@ -253,7 +253,7 @@
   <!-- =============== END NOTABLE SHOPKEEPERS AND WANDERERS =============== -->
   <!-- =============== BEGIN DRAGON VILLAGE NPCS =============== -->
     <section>
-      <div style="border: 3px solid #00FFFF; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: rgba(224,255,255,0.10);">
+  <div style="border: 3px solid #00FFFF; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: #00000062;">
         <h2 style="color: #00FFFF; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000; margin-top: 0;">Dragon Village NPCs (Planet Mogo, Realm of Creation)</h2>
         <ul>
           <li>
@@ -307,7 +307,7 @@
   <!-- =============== END DRAGON VILLAGE NPCS =============== -->
     <!-- Milicia Valen's Direct Family -->
     <section>
-      <div style="border: 3px solid #FF00FF; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: rgba(255,192,203,0.10);">
+  <div style="border: 3px solid #FF00FF; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: #00000062;">
         <h2 style="color: #FF00FF; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000; margin-top: 0;">Milicia Valen's Direct Family</h2>
         <ul>
           <li>
@@ -367,7 +367,7 @@
         flex-shrink: 0;
       "
     >
-      <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: rgba(240,240,240,0.15);">
+  <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: #ffffff62;">
         <p
           style="
             font-size:1.1em;
