--- a/html/yo-sheet.html
+++ b/html/yo-sheet.html
@@ -88,6 +88,6 @@
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
+  <p style="background: #ffffff62;">&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
     <p style="font-size:0.9em; color:#888; margin-top:0.5em;">Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC. This is a fan site for personal use. All rights reserved.</p>
   </footer>
