--- a/html/characters.html
+++ b/html/characters.html
@@ -65,7 +65,7 @@
   <!-- ================= BEGIN MAIN CONTENT ================= -->
   <main style="background: rgba(0,0,0,0); border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); margin: 10rem auto 1.5rem auto; max-width: 900px; padding: 1rem 2rem; flex: 1 0 auto;">
     <!-- ================= BEGIN PLAYER CHARACTERS SECTION ================= -->
-    <section style="text-align:center;">
+    <section style="text-align:left;">
       <h2 style="color: #FFD700; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">Player Characters</h2>
       <div class="character-grid">
         <div class="character-row">
@@ -143,7 +143,7 @@
       flex-shrink: 0;
     "
   >
-    <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: rgba(240,240,240,0.15);">
+  <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: #ffffff62;">
       <p
         style="
           font-size:1.1em;
