--- a/html/yo.html
+++ b/html/yo.html
@@ -155,7 +155,7 @@
       flex-shrink: 0;
     "
   >
-    <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: rgba(240,240,240,0.15);">
+  <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: #ffffff62;">
       <p
         style="
           font-size:1.1em;
