--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 	<link rel="icon" href="assets/icons/favicon.ico">
 </head>
 <style>
-@keyframes rainbow-move {
-	0% { background-position: 0% 50%; }
-	100% { background-position: 100% 50%; }
-}
-</style>
-<style>
-html, body {
-	overflow-x: hidden;
-}
+	@keyframes rainbow-move {
+		0% { background-position: 0% 50%; }
+		100% { background-position: 100% 50%; }
+	}
+	html, body {
+		overflow-x: hidden;
+	}
 </style>
 <body
 	style="
@@ -85,42 +83,38 @@ html, body {
 		"
 	>
 	<!-- ================= BEGIN INTRO SECTION ================= -->
-	<section style="text-align:center; margin-top:-3rem;">
-			<h2 style="color: #e40a0a; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">Adventures Await!</h2>
-			<div
-				style="
-					max-width: 600px;
-					margin: 0 auto;
-					background: #f8f8f862;
-					border-radius: 10px;
-					box-shadow: 0 2px 10px rgb(0, 0, 0);
-					padding: 1.5rem 2rem;
-					border: 3px solid #ff0000;
-				"
-			>
-				<p
-					style="
-						margin: 0;
-						text-align: justify;
-						font-weight: bold;
-						font-size: 1.08em;
-						background: linear-gradient(90deg, #ff0000, #ff9900, #ffee00, #33ff00, #00ffee, #0066ff, #cc00ff, #ff0000 90%);
-						background-size: 200% auto;
-						color: transparent;
-						background-clip: text;
-						-webkit-background-clip: text;
-						-webkit-text-fill-color: transparent;
-						animation: rainbow-move 5s linear infinite;
-					"
-				>
-					This site is your reference for the ongoing Dungeons & Dragons campaign set in the city of Yusaf'hed and beyond. Meet the current party: Biggus Menethil, Feren Dax, Milicia Valen, and Yo. Discover the stories of the Velvet Whisper Velistra Dax, the Mage-breaker Torri Spellguard, and more. Explore a world where beauty is a weapon, magic can be broken, and every character has a secret worth uncovering. Use the navigation above to meet the cast, learn the house rules, and dive into the evolving lore and session notes. Adventures, mysteries, and legends await, start exploring!
-				</p>
-			</div>
+	<section style="text-align: center; margin-top: -3rem;">
+		<h2 style="color: #e40a0a; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">Adventures Await!</h2>
+		<div style="
+			max-width: 600px;
+			margin: 0 auto;
+			background: #00000062;
+			border-radius: 10px;
+			box-shadow: 0 2px 10px rgb(0, 0, 0);
+			padding: 1.5rem 2rem;
+			border: 3px solid #ff0000;
+		">
+			<p style="
+				margin: 0;
+				text-align: justify;
+				font-weight: bold;
+				font-size: 1.1em;
+				background: linear-gradient(90deg, #ff0000, #ff9900, #ffee00, #33ff00, #00ffee, #0066ff, #cc00ff, #ff0000 90%);
+				background-size: 200% auto;
+				color: transparent;
+				background-clip: text;
+				-webkit-background-clip: text;
+				-webkit-text-fill-color: transparent;
+				animation: rainbow-move 5s linear infinite;
+			">
+				This site is your reference for the ongoing Dungeons & Dragons campaign set in the city of Yusaf'hed and beyond. Meet the current party: Biggus Menethil, Feren Dax, Milicia Valen, and Yo. Discover the stories of the Velvet Whisper Velistra Dax, the Mage-breaker Torri Spellguard, and more. Explore a world where beauty is a weapon, magic can be broken, and every character has a secret worth uncovering. Use the navigation above to meet the cast, learn the house rules, and dive into the evolving lore and session notes. Adventures, mysteries, and legends await, start exploring!
+			</p>
+		</div>
 	</section>
 	<!-- ================= END INTRO SECTION ================= -->
 	<!-- ================= BEGIN QUICK LINKS SECTION ================= -->
 	<section style="max-width:700px; margin:2rem auto;">
-		  <div style="border: 3px solid #ff0000; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: rgba(255, 228, 181, 0.10);">
+		  <div style="border: 3px solid #ff0000; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: #00000062;	">
 			<h3 style="text-align:center; color: #ff0000; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000; margin-top: 0;">Quick Links</h3>
 			<div
 				style="
@@ -144,7 +138,7 @@ html, body {
 						align-items:center;
 						justify-content:center;
 						color:#ff0000;
-						background:#0000006e;
+						background:#00000062;
 						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
 					"
 				>Characters</a>
@@ -159,7 +153,7 @@ html, body {
 						align-items:center;
 						justify-content:center;
 						color:#ff0000;
-						background:#00000082;
+						background:#00000062;
 						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
 					"
 				>Important NPCs</a>
@@ -174,7 +168,7 @@ html, body {
 						align-items:center;
 						justify-content:center;
 						color:#ff0000;
-						background:#00000083;
+						background:#00000062;
 						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
 					"
 				>Locations</a>
@@ -189,7 +183,7 @@ html, body {
 						align-items:center;
 						justify-content:center;
 						color:#ff0000;
-						background:#0000007f;
+						background:#00000062;
 						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
 					"
 				>Lore Books</a>
@@ -204,7 +198,7 @@ html, body {
 						align-items:center;
 						justify-content:center;
 						color:#ff0000;
-						background:#00000080;
+						background:#00000062;
 						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
 					"
 				>House Rules</a>
@@ -219,7 +213,7 @@ html, body {
 						align-items:center;
 						justify-content:center;
 						color:#ff0000;
-						background:#00000080;
+						background:#00000062;
 						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
 					"
 				>Organizations</a>
@@ -234,7 +228,7 @@ html, body {
 						align-items:center;
 						justify-content:center;
 						color:#ff0000;
-						background:#00000071;
+						background:#00000062;
 						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
 					"
 				>Session Notes</a>
@@ -256,21 +250,21 @@ html, body {
 			flex-shrink: 0;
 		"
 	>
-    <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: rgba(240,240,240,0.15);">
-      <p
-        style="
-          font-size:1.1em;
-          color:#000000;
-          margin-top:-0em;
-          text-align:center;
-          text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;
-          margin-bottom: 0.2em;
-        "
-      >
-        &copy; 2025 D&amp;D Campaign Reference; Ruleset: D&amp;D 5e (2014 version)<br>
-        Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC.<br>
-        This is a fan site for personal use. All rights reserved.
-      </p>
+	<div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: #ffffff62;">
+					<p
+						style="
+							font-size:1.1em;
+							color:#000000;
+							margin-top:-0em;
+							text-align:center;
+							text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;
+							margin-bottom: 0.2em;
+						"
+					>
+						&copy; 2025 D&amp;D Campaign Reference; Ruleset: D&amp;D 5e (2014 version)<br>
+						Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC.<br>
+						This is a fan site for personal use. All rights reserved.
+					</p>
     </div>
 </footer>
 <!-- ================= END FOOTER ================= -->
