a little more mobile friendly

--- a/html/characters.html
+++ b/html/characters.html
@@ -22,7 +22,8 @@
     }
   </style>
 </head>
-<body>
+<!-- [MOBILE HORIZ SCROLL ENABLED 2025-09-07] -->
+<body style="overflow-x: auto; white-space: nowrap; -webkit-overflow-scrolling: touch;">
   <!-- ================= BEGIN HEADER ================= -->
   <header
     style="
@@ -36,7 +37,7 @@
       left: 0;
       right: 0;
       margin: 0;
-      padding: 1rem 2rem;
+      padding: 1rem 0rem;
       z-index: 1000;
     "
   >
@@ -76,7 +77,7 @@
               <ul>
                 <li>Played by: Mike</li>
                 <li>Species: Human (Variant)</li>
-                <li>Class(s): Ranger (lvl) / Rogue (lvl)</li>
+                <li>Class(s): Ranger (lvl) <br>/ Rogue (lvl)</li>
                 <li>Background: Rune Carver</li>
               </ul>
             </div>
@@ -88,7 +89,7 @@
               <ul>
                 <li>Played by: Duwies</li>
                 <li>Species: Half-Orc</li>
-                <li>Class(s): Paladin (lvl) / Cleric (lvl)</li>
+                <li>Class(s): Paladin (lvl)<br> / Cleric (lvl)</li>
                 <li>Background: Gate Warden</li>
                 <li>Dual devotion:
                   <ul>
@@ -108,7 +109,7 @@
               <ul>
                 <li>Played by: Will</li>
                 <li>Species: Tiefling</li>
-                <li>Class(s): Warlock (lvl) / Fighter (lvl)</li>
+                <li>Class(s): Warlock (lvl)<br> / Fighter (lvl)</li>
                 <li>Background: Criminal</li>
               </ul>
             </div>
@@ -120,7 +121,7 @@
               <ul>
                 <li>Played by: Ryan</li>
                 <li>Species: Halfling (Stout)</li>
-                <li>Class(s): Druid (lvl) / Fighter (lvl)</li>
+                <li>Class(s): Druid (lvl)<br> / Fighter (lvl)</li>
                 <li>Background: Folk Hero</li>
               </ul>
             </div>
