--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				   left: 0;
 				   right: 0;
 				   margin: 0;
-				   padding: 1rem 2rem;
+				   padding: 1rem 0rem;
 				   z-index: 100;
 			"
 		>
@@ -73,25 +73,26 @@
 	<!-- ================= BEGIN MAIN CONTENT ================= -->
 	<main
 		style="
+			text-align: center;
 			background: rgba(0, 0, 0, 0);
-			border-radius: 10px;
-		margin: 10rem auto 1.5rem auto;
+			border-radius: 0 0 0px 0px;
+			margin: 10rem auto 1.5rem auto;
 			max-width: 900px;
 			min-height: 40px;
-			padding: 1rem 2rem;
-			flex: 1 0 auto;
+			padding: 1rem 0rem;
+			flex: 1 1 auto;
 		"
 	>
 	<!-- ================= BEGIN INTRO SECTION ================= -->
-	<section style="text-align: center; margin-top: -3rem;">
+		<section style="text-align: center;">
 		<h2 style="color: #e40a0a; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">Adventures Await!</h2>
 		<div style="
-			max-width: 600px;
-			margin: 0 auto;
+			max-width: 75%;
+			margin: 1rem auto auto auto;
 			background: #00000062;
-			border-radius: 10px;
+			border-radius: 0px;
 			box-shadow: 0 2px 10px rgb(0, 0, 0);
-			padding: 1.5rem 2rem;
+			padding: 1rem 1rem;
 			border: 3px solid #ff0000;
 		">
 			<p style="
@@ -100,7 +101,7 @@
 				font-weight: bold;
 				font-size: 1.1em;
 				background: linear-gradient(90deg, #ff0000, #ff9900, #ffee00, #33ff00, #00ffee, #0066ff, #cc00ff, #ff0000 90%);
-				background-size: 200% auto;
+				
 				color: transparent;
 				background-clip: text;
 				-webkit-background-clip: text;
@@ -112,129 +113,7 @@
 		</div>
 	</section>
 	<!-- ================= END INTRO SECTION ================= -->
-	<!-- ================= BEGIN QUICK LINKS SECTION ================= -->
-	<section style="max-width:700px; margin:2rem auto;">
-		  <div style="border: 3px solid #ff0000; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: #00000062;	">
-			<h3 style="text-align:center; color: #ff0000; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000; margin-top: 0;">Quick Links</h3>
-			<div
-				style="
-					display: flex;
-					flex-wrap: wrap;
-					justify-content: center;
-					gap: 1rem;
-					max-width:600px;
-					min-height: 40px;
-					margin:0 auto;
-				"
-			>
-				<a
-					class="character-card"
-					href="html/characters.html"
-					style="
-						flex: 0 1 calc(20% - 1rem);
-						min-width:120px;
-						text-align:center;
-						display:flex;
-						align-items:center;
-						justify-content:center;
-						color:#ff0000;
-						background:#00000062;
-						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
-					"
-				>Characters</a>
-				<a
-					class="character-card"
-					href="html/important-npcs.html"
-					style="
-						flex: 0 1 calc(20% - 1rem);
-						min-width:120px;
-						text-align:center;
-						display:flex;
-						align-items:center;
-						justify-content:center;
-						color:#ff0000;
-						background:#00000062;
-						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
-					"
-				>Important NPCs</a>
-				<a
-					class="character-card"
-					href="html/locations.html"
-					style="
-						flex: 0 1 calc(20% - 1rem);
-						min-width:120px;
-						text-align:center;
-						display:flex;
-						align-items:center;
-						justify-content:center;
-						color:#ff0000;
-						background:#00000062;
-						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
-					"
-				>Locations</a>
-				<a
-					class="character-card"
-					href="html/lore-books.html"
-					style="
-						flex: 0 1 calc(20% - 1rem);
-						min-width:120px;
-						text-align:center;
-						display:flex;
-						align-items:center;
-						justify-content:center;
-						color:#ff0000;
-						background:#00000062;
-						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
-					"
-				>Lore Books</a>
-				<a
-					class="character-card"
-					href="html/house-rules.html"
-					style="
-						flex: 0 1 calc(20% - 1rem);
-						min-width:120px;
-						text-align:center;
-						display:flex;
-						align-items:center;
-						justify-content:center;
-						color:#ff0000;
-						background:#00000062;
-						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
-					"
-				>House Rules</a>
-				<a
-					class="character-card"
-					href="html/organizations.html"
-					style="
-						flex: 0 1 calc(20% - 1rem);
-						min-width:120px;
-						text-align:center;
-						display:flex;
-						align-items:center;
-						justify-content:center;
-						color:#ff0000;
-						background:#00000062;
-						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
-					"
-				>Organizations</a>
-				<a
-					class="character-card"
-					href="html/session-notes.html"
-					style="
-						flex: 0 1 calc(20% - 1rem);
-						min-width:120px;
-						text-align:center;
-						display:flex;
-						align-items:center;
-						justify-content:center;
-						color:#ff0000;
-						background:#00000062;
-						text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;
-					"
-				>Session Notes</a>
-			</div>
-	</section>
-	<!-- ================= END QUICK LINKS SECTION ================= -->
+	
 	</main>
 	<!-- ================= END MAIN CONTENT ================= -->
 
@@ -258,7 +137,7 @@
 							margin-top:-0em;
 							text-align:center;
 							text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;
-							margin-bottom: 0.2em;
+							margin-bottom: auto;
 						"
 					>
 						&copy; 2025 D&amp;D Campaign Reference; Ruleset: D&amp;D 5e (2014 version)<br>
@@ -268,5 +147,14 @@
     </div>
 </footer>
 <!-- ================= END FOOTER ================= -->
+<script>
+	window.addEventListener('DOMContentLoaded', function() {
+		var header = document.querySelector('header');
+		var intro = document.querySelector('main > section');
+		if (header && intro) {
+			intro.style.marginTop = (header.offsetHeight / 7.5) + 'px';
+		}
+	});
+</script>
 </body>
 </html>
